Crafting calculator v2 unit tests, api for ae2fc and byproduct bug fixes (#223)
* Add a unittest mod that runs on server start in the dev environment

* Integrate JUnit 5 into functionalTests

* Byte cost adjustment api for ae2fc, fix byproduct refund handling

* Output an XML of the test run for debugging

* Add enough mock wrappers for a simple crafting test with no patterns

* Add processing pattern mocking support and a test for it

* Add mock item storage and tests for crafting with items stored

* Add a test for crafting chests from different log types

* Add a test for a mixed log chest crafting, change report format to more readable legacy xml

* Fix wrong generic argument in registerByteAmountAdjuster

* Add an explanation javadoc of byproduct separation

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -21,4 +21,9 @@ dependencies {
     compileOnly('api:immibis:1')
 
     testCompile('junit:junit:4.12')
+    functionalTestImplementation(platform('org.junit:junit-bom:5.9.2'))
+    functionalTestImplementation('org.junit.jupiter:junit-jupiter')
+    functionalTestImplementation('org.junit.platform:junit-platform-engine')
+    functionalTestImplementation('org.junit.platform:junit-platform-launcher')
+    functionalTestImplementation('org.junit.platform:junit-platform-reporting')
 }
