--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -2,16 +2,15 @@
 
 dependencies {
     compile('com.github.GTNewHorizons:CodeChickenLib:1.1.5.6:dev')
-    compile('com.github.GTNewHorizons:NotEnoughItems:2.3.20-GTNH:dev')
+    compile('com.github.GTNewHorizons:NotEnoughItems:2.3.21-GTNH:dev')
     compile('curse.maven:cofh-core-69162:2388751')
-
     compile('com.github.GTNewHorizons:BuildCraft:7.1.28:dev') {transitive = false}
     compileOnly('com.github.GTNewHorizons:ForgeMultipart:1.2.8:dev') {transitive = false}
     compileOnly('com.github.GTNewHorizons:GT5-Unofficial:5.09.41.18:dev') {transitive = false}
     compileOnly('com.github.GTNewHorizons:Jabba:1.2.21:dev') {transitive = false}
     compileOnly('com.github.GTNewHorizons:inventory-tweaks:1.5.15:api') {transitive = false}
     compileOnly('com.github.GTNewHorizons:OpenComputers:1.7.5.32-GTNH:api') {transitive = false}
-    compileOnly('com.github.GTNewHorizons:waila:1.5.21:api') {transitive = false}
+    compileOnly('com.github.GTNewHorizons:waila:1.5.21:dev') {transitive = false}
     compileOnly('com.github.GTNewHorizons:Railcraft:9.13.10:api') {transitive = false}
 
     compileOnly('net.industrial-craft:industrialcraft-2:2.2.828-experimental:api')
