--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -30,4 +30,6 @@ dependencies {
     functionalTestImplementation('com.github.GTNewHorizons:GT5-Unofficial:5.09.44.34:dev') {
         exclude module: "Applied-Energistics-2-Unofficial"
     }
+
+    runtimeOnlyNonPublishable("com.github.GTNewHorizons:DuraDisplay:1.1.7:dev")
 }
