--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -3,6 +3,7 @@
 dependencies {
     implementation('com.github.GTNewHorizons:NotEnoughItems:2.4.12-GTNH:dev')
     implementation('curse.maven:cofh-core-69162:2388751')
+    
     compileOnly('com.github.GTNewHorizons:BuildCraft:7.1.36:dev') {transitive = false}
     compileOnly('com.github.GTNewHorizons:ForgeMultipart:1.4.0:dev') {transitive = false}
     compileOnly('com.github.GTNewHorizons:GT5-Unofficial:5.09.44.79:dev') {transitive = false}
@@ -32,4 +33,7 @@ dependencies {
     }
 
     runtimeOnlyNonPublishable("com.github.GTNewHorizons:DuraDisplay:1.1.7:dev")
+    runtimeOnlyNonPublishable('com.github.GTNewHorizons:Baubles:1.0.1.16:dev')
+    runtimeOnlyNonPublishable('thaumcraft:Thaumcraft:1.7.10-4.2.3.5:dev')
+    runtimeOnlyNonPublishable('com.github.GTNewHorizons:ThaumicEnergistics:1.5.0-GTNH:dev') { transitive = false }
 }
