--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -35,5 +35,6 @@ dependencies {
     runtimeOnlyNonPublishable("com.github.GTNewHorizons:DuraDisplay:1.1.7:dev")
     runtimeOnlyNonPublishable('com.github.GTNewHorizons:Baubles:1.0.1.16:dev')
     runtimeOnlyNonPublishable('thaumcraft:Thaumcraft:1.7.10-4.2.3.5:dev')
-    runtimeOnlyNonPublishable('com.github.GTNewHorizons:ThaumicEnergistics:1.5.0-GTNH:dev') { transitive = false }
+    runtimeOnlyNonPublishable('com.github.GTNewHorizons:ThaumicEnergistics:1.5.1-GTNH:dev') { transitive = false }
+    runtimeOnlyNonPublishable('com.github.GTNewHorizons:AE2FluidCraft-Rework:1.1.67-gtnh:dev') { transitive = false }
 }
